--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Index</title>
+	<meta charset="utf-8">
+	<title>DHSFinalProject</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
 <body>
+	<div class="header">
+  	 <h1>Doggos</h1>
+	</div>
+	<div class="navbar">
+ 	 <a href="index.html">Homepage</a>
+ 	 <a href="Page2.html">Page 2</a>
+	 <a href="Page3.html">Page 3</a>
+  	 <a href="Page4.html">Page 4</a>
+	 <a href="Page5.html" class="Finalbar">Page 5</a>
+	</div>
 </body>
 </html>
