--- a/Page3.html
+++ b/Page3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: Breeds A-M</title>
+	<title>DHSFinalProject: Breeds A</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -13,16 +13,199 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A-M</a>
-  	 <a href="Page4.html">Breeds N-Z</a>
+	 <a href="Page3.html">Breeds A</a>
+  	 <a href="Page4.html">Breeds B</a>
 	 <a href="Page5.html">Relation to Wolves</a>
 	</div>
 	
-	<p>
-	dog breeds
-	</p>
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Affenpinscher.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Affenpinscher</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
 	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Afghan Hound.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Afghan Hound</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Airedale Terrier.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Airedale Terrier</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Akita.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Akita</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Alaskan Malamute.jfif" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Alaskan Malamute</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Bulldog.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">American Bulldog</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/American Eskimo Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">American Eskimo</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Foxhound.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">American Foxhound</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
 		
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/American Hairless Terrier.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">American Hairless Terrier</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Water Spaniel.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">American Water Spaniel</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Anatolian Shepherd Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Anatolian Shepherd Dog</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Appenzeller Sennenhund.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Appenzeller Sennenhund</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Australian Cattle Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Australian Cattle Dog</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Australian Kelpie.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Australian Kelpie</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Australian Shepherd.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Australian Shepherd</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Australian Terrier.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Australian Terrier</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Azawakh.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Azawakh</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+	
 	<div class="footer">
   	 <h2>Credit</h2>
 	</div>
