--- a/Page4.html
+++ b/Page4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: Breeds N-Z</title>
+	<title>DHSFinalProject: Breeds B</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -13,14 +13,199 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A-M</a>
-  	 <a href="Page4.html">Breeds N-Z</a>
+	 <a href="Page3.html">Breeds A</a>
+  	 <a href="Page4.html">Breeds B</a>
 	 <a href="Page5.html">Relation to Wolves</a>
 	</div>
 	
-	<p>
-	dog breeds
-	</p>
+<div class="Rows">
+	<img src="Dog Breed Pictures/B/Barbet.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Barbet</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/B/Basenji.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Basenji</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/B/Beagle.jfif" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Beagle</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Akita.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Bearded Collie</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Alaskan Malamute.jfif" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Belgian Laekenois</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Bulldog.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Belgian Sheepdog</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/American Eskimo Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Belgian Tervuren</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Foxhound.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Berger Picard</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+		
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/American Hairless Terrier.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Bernese Mountain Dog</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/American Water Spaniel.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Black Russian Terrier</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Anatolian Shepherd Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Bloodhound</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Appenzeller Sennenhund.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Australian Cattle Dog.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Australian Kelpie.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Australian Shepherd.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Australian Terrier.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/A/Azawakh.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1"></h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+	
 	
 		
 	<div class="footer">
