--- a/Page2.html
+++ b/Page2.html
@@ -13,9 +13,9 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A-M</a>
-  	 <a href="Page4.html">Breeds N-Z</a>
-	 <a href="Page5.html">Relation to Wolves</a>
+	 <a href="Page3.html">Types Of Dogs A</a>
+  	 <a href="Page4.html">Types Of Dogs B</a>
+	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
 	<p>
@@ -24,6 +24,9 @@
 		
 	<div class="footer">
   	 <h2>Credit</h2>
+	<P>
+		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
+	</P>
 	</div>
 </body>
 </html>
