--- a/Page3.html
+++ b/Page3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: Breeds A</title>
+	<title>DHSFinalProject: Types Of Dogs A</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -13,33 +13,12 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A</a>
-  	 <a href="Page4.html">Breeds B</a>
-	 <a href="Page5.html">Relation to Wolves</a>
+	 <a href="Page3.html">Types Of Dogs A</a>
+  	 <a href="Page4.html">Types Of Dogs B</a>
+	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Affenpinscher.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1">Affenpinscher</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Afghan Hound.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">Afghan Hound</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
+
 <div class="Rows">
 	<img src="Dog Breed Pictures/A/Airedale Terrier.jpg" class="picturestuff1" />
 		<div class="TextAlign1">
@@ -106,27 +85,7 @@
 		</div>
 </div>
 		
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/American Hairless Terrier.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1">American Hairless Terrier</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Water Spaniel.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">American Water Spaniel</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
+
 	
 <div class="Rows">
 	<img src="Dog Breed Pictures/A/Anatolian Shepherd Dog.jpg" class="picturestuff1" />
@@ -183,31 +142,14 @@
 		</div>
 </div>
 	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Australian Terrier.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">Australian Terrier</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Azawakh.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1">Azawakh</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
+
 	
 	
 	<div class="footer">
   	 <h2>Credit</h2>
+	<P>
+		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
+	</P>
 	</div>
 </body>
 </html>
