--- a/Page4.html
+++ b/Page4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: Breeds B</title>
+	<title>DHSFinalProject: Types Of Dogs B</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -13,9 +13,9 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A</a>
-  	 <a href="Page4.html">Breeds B</a>
-	 <a href="Page5.html">Relation to Wolves</a>
+	 <a href="Page3.html">Types Of Dogs A</a>
+  	 <a href="Page4.html">Types Of Dogs B</a>
+	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
 <div class="Rows">
@@ -52,7 +52,7 @@
 </div>
 	
 <div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Akita.jpg" class="picturestuff2" />
+	<img src="Dog Breed Pictures/B/Bearded Collie.jpg" class="picturestuff2" />
 		<div class="TextAlign2">
 			<h1 class="textsze1">Bearded Collie</h1>
 			<p class="textsize2">
@@ -63,7 +63,7 @@
 </div>
 	
 <div class="Rows">
-	<img src="Dog Breed Pictures/A/Alaskan Malamute.jfif" class="picturestuff1" />
+	<img src="Dog Breed Pictures/B/Belgian Laekenois.jpg" class="picturestuff1" />
 		<div class="TextAlign1">
 			<h1 class="textsze1">Belgian Laekenois</h1>
 			<p class="textsize2">
@@ -74,7 +74,7 @@
 </div>
 	
 <div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Bulldog.jfif" class="picturestuff2" />
+	<img src="Dog Breed Pictures/B/Belgian Sheepdog.jpg" class="picturestuff2" />
 		<div class="TextAlign2">
 			<h1 class="textsze1">Belgian Sheepdog</h1>
 			<p class="textsize2">
@@ -85,7 +85,7 @@
 </div>
 	
 <div class="Rows">
-	<img src="Dog Breed Pictures/A/American Eskimo Dog.jpg" class="picturestuff1" />
+	<img src="Dog Breed Pictures/B/Belgian Tervuren.jfif" class="picturestuff1" />
 		<div class="TextAlign1">
 			<h1 class="textsze1">Belgian Tervuren</h1>
 			<p class="textsize2">
@@ -96,7 +96,7 @@
 </div>
 	
 <div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Foxhound.jfif" class="picturestuff2" />
+	<img src="Dog Breed Pictures/B/Berger Picard.jpg" class="picturestuff2" />
 		<div class="TextAlign2">
 			<h1 class="textsze1">Berger Picard</h1>
 			<p class="textsize2">
@@ -107,7 +107,7 @@
 </div>
 		
 <div class="Rows">
-	<img src="Dog Breed Pictures/A/American Hairless Terrier.jpg" class="picturestuff1" />
+	<img src="Dog Breed Pictures/B/Bernese Mountain Dog.jpg" class="picturestuff1" />
 		<div class="TextAlign1">
 			<h1 class="textsze1">Bernese Mountain Dog</h1>
 			<p class="textsize2">
@@ -117,99 +117,15 @@
 		</div>
 </div>
 	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Water Spaniel.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">Black Russian Terrier</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Anatolian Shepherd Dog.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1">Bloodhound</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Appenzeller Sennenhund.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Australian Cattle Dog.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
 
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Australian Kelpie.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Australian Shepherd.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Australian Terrier.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Azawakh.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
-			<h1 class="textsze1"></h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
 	
 	
 		
 	<div class="footer">
   	 <h2>Credit</h2>
+	<P>
+		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
+	</P>
 	</div>
 </body>
 </html>
