--- a/Page5.html
+++ b/Page5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: Relation to Wolves</title>
+	<title>DHSFinalProject: Types Of Wolves</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
@@ -13,19 +13,85 @@
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
  	 <a href="Page2.html">History Of Dogs</a>
-	 <a href="Page3.html">Breeds A-M</a>
-  	 <a href="Page4.html">Breeds N-Z</a>
-	 <a href="Page5.html">Relation to Wolves</a>
+	 <a href="Page3.html">Types Of Dogs A</a>
+  	 <a href="Page4.html">Types Of Dogs B</a>
+	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
+<div class="Rows">
+	<img src="Dog Breed Pictures/Types of Wolves/Arctic Wolf.jfif" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Arctic Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
 	
-	<p>
-	About Wolves
-	</p>
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/Types of Wolves/Northwestern Wolf.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Northwestern Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/Types of Wolves/Mexican Wolf.jfif" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Mexican Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/Types of Wolves/Eurasian Wolf.jfif" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Eurasian Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="Rows">
+	<img src="Dog Breed Pictures/Types of Wolves/Northern Rocky Mountain Wolf.jpg" class="picturestuff1" />
+		<div class="TextAlign1">
+			<h1 class="textsze1">Northern Rocky Mountain Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/Types of Wolves/Mongolian Wolf.jpg" class="picturestuff2" />
+		<div class="TextAlign2">
+			<h1 class="textsze1">Mongolian Wolf</h1>
+			<p class="textsize2">
+			Stuff About Dog
+			</p>
+	
+		</div>
+</div>
+	
+
 	
 		
 	<div class="footer">
   	 <h2>Credit</h2>
+	<P>
+		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
+	</P>
 	</div>
 </body>
 </html>
