--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>DHSFinalProject: HomePage</title>
+	<title>DHSFinalProject: index</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 
