--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
 	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
+	<div>
+	<img src"" />
+	</div>
 	
-	<p>
+	<div class="textCenter">
+	<h1 class="textsze1">
+	Why the website is on Dogs
+	</h1>
+	<p class="textsize2">
 	Talk about what the website is about
 	</p>
+	</div>
+		
 	
 	<div class="footer">
   	 <h2>Credit</h2>
-	<P>
+	<p>
 		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
-	</P>
+	</p>
 	</div>
 </body>
 </html>
