--- a/Page2.html
+++ b/Page2.html
@@ -12,21 +12,21 @@
 	</div>
 	<div class="navbar">
  	 <a href="index.html">Homepage</a>
- 	 <a href="Page2.html">History Of Dogs</a>
+ 	 <a href="Page2.html">My Dogs</a>
 	 <a href="Page3.html">Types Of Dogs A</a>
   	 <a href="Page4.html">Types Of Dogs B</a>
 	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
 	<p>
-	history stuff
+	About my Dogs
 	</p>
 		
 	<div class="footer">
   	 <h2>Credit</h2>
-	<P>
+	<p>
 		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
-	</P>
+	</p>
 	</div>
 </body>
 </html>
