--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	<h1 class="textsze1">
 	Why the website is on Dogs
 	</h1>
-	<p class="textsize2">
-	Talk about what the website is about
+	<p class="textsize2 margin">
+	This Website is about dogs because im a dog owner, and i would like people to learn about diferent dog breeds
 	</p>
 	</div>
 		
