--- a/Page3.html
+++ b/Page3.html
@@ -24,7 +24,17 @@
 		<div class="TextAlign1">
 			<h1 class="textsze1">Airedale Terrier</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 23 inches.
+				<br />
+			<strong>Avg Weight:</strong> 50-70 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 11-14 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> 2-3 times a week brushing, Shedding is occasional.
+				<br />
+			<strong>Behavior Traits:</strong> Docile, Protecting, Stubborn.
 			</p>
 	
 		</div>
@@ -35,8 +45,19 @@
 		<div class="TextAlign2">
 			<h1 class="textsze1">Akita</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 24-28 inches.
+				<br />
+			<strong>Avg Weight:</strong> 70-130 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 10-13 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> Daily brushing, Shedding is Seasonal.
+				<br />
+			<strong>Behavior Traits:</strong> Silly, Protecting, Affectionate, Wary of Strangers, Food Possessive.
 			</p>
+	
 	
 		</div>
 </div>
@@ -46,110 +67,118 @@
 		<div class="TextAlign1">
 			<h1 class="textsze1">Alaskan Malamute</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 23-25 inches.
+				<br />
+			<strong>Avg Weight:</strong> 75-85 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 10-14 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, Some are prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> 2-3 times a week brushing, Shedding is Seasonal.
+				<br />
+			<strong>Behavior Traits:</strong> Well behaved, playful, gentle, and friendly if you give loving training from early puppyhood
 			</p>
 	
 		</div>
 </div>
 	
 <div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Bulldog.jfif" class="picturestuff2" />
+	<img src="Dog Breed Pictures/A/American Eskimo Dog.jpg" class="picturestuff2" />
 		<div class="TextAlign2">
-			<h1 class="textsze1">American Bulldog</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/American Eskimo Dog.jpg" class="picturestuff1" />
-		<div class="TextAlign1">
 			<h1 class="textsze1">American Eskimo</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 9-19 inches.
+				<br />
+			<strong>Avg Weight:</strong> 6-35 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 13-15 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, Some are prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> Weekly brushing, Shedding is Seasonal.
+				<br />
+			<strong>Behavior Traits:</strong> Clever, Kid-Friendly, But can develop behavior problems if neglected or undertrained
 			</p>
 	
 		</div>
 </div>
 	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/American Foxhound.jfif" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">American Foxhound</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
 	
-		</div>
-</div>
-		
-
 	
 <div class="Rows">
-	<img src="Dog Breed Pictures/A/Anatolian Shepherd Dog.jpg" class="picturestuff1" />
+	<img src="Dog Breed Pictures/A/Appenzeller Sennenhund.jpg" class="picturestuff1" />
 		<div class="TextAlign1">
-			<h1 class="textsze1">Anatolian Shepherd Dog</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Appenzeller Sennenhund.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
 			<h1 class="textsze1">Appenzeller Sennenhund</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 19-22 inches.
+				<br />
+			<strong>Avg Weight:</strong> 47-70 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 12-15 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, Some are prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> Weekly brushing, Shedding is Regularly.
+				<br />
+			<strong>Behavior Traits:</strong> Lively, High-Spirited, Self-Assured, Reliable, fearless, and Slightly Suspicious of Strangers (not good for apartment living)
 			</p>
 	
 		</div>
 </div>
 	
-<div class="Rows">
-	<img src="Dog Breed Pictures/A/Australian Cattle Dog.jpg" class="picturestuff1" />
+<div class="ReverseRows">
+	<img src="Dog Breed Pictures/A/Australian Cattle Dog.jpg" class="picturestuff2" />
 		<div class="TextAlign1">
-			<h1 class="textsze1">Australian Cattle Dog</h1>
+			<h1 class="textsze2">Australian Cattle Dog</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 17-20 inches.
+				<br />
+			<strong>Avg Weight:</strong> 35-50 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 12-16 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, Some are prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> Occasional Bath/Brush, Shedding is Regularly.
+				<br />
+			<strong>Behavior Traits:</strong> Smart, Alert, Wary of Strangers, Easily Bored, Can get Mischievous
 			</p>
 	
 		</div>
 </div>
 
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/A/Australian Kelpie.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">Australian Kelpie</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
-	
 <div class="Rows">
 	<img src="Dog Breed Pictures/A/Australian Shepherd.jpg" class="picturestuff1" />
 		<div class="TextAlign1">
 			<h1 class="textsze1">Australian Shepherd</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 18-23 inches.
+				<br />
+			<strong>Avg Weight:</strong> 40-65 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 12-15 years.
+				<br />
+			<strong>Nutrition:</strong> High-Quality Dog Food, Clean fresh water avalible at all times, Some are prone to getting overweight.
+				<br />
+			<strong>Grooming:</strong> Weekly Brushing, Shedding is Seasonal.
+				<br />
+			<strong>Behavior Traits:</strong> Prone to herd anything, Intelligent,very tricky (Is not for everyone)
 			</p>
 	
 		</div>
 </div>
+	
+
 	
 
 	
 	
 	<div class="footer">
   	 <h2>Credit</h2>
-	<P>
+	<p>
 		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
-	</P>
+	</p>
 	</div>
 </body>
 </html>
