--- a/Page5.html
+++ b/Page5.html
@@ -18,12 +18,29 @@
 	 <a href="Page5.html">Types Of Wolves</a>
 	</div>
 	
+	
+<div class="warning">
+	<h2 class="textsze1 redtext">!WARNING!</h2>
+	<h2 class="textsze1">These animals are not Pets</h2>
+	</div>
+	
+	
 <div class="Rows">
 	<img src="Dog Breed Pictures/Types of Wolves/Arctic Wolf.jfif" class="picturestuff1" />
 		<div class="TextAlign1">
 			<h1 class="textsze1">Arctic Wolf</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 24-36 inches.
+				<br />
+			<strong>Avg Weight:</strong> 55-88 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 7-10 years.
+				<br />
+			<strong>Diet:</strong> Artic Hares, Caribou, Lemmings, and Muskoxen.
+				<br />
+			<strong>Population Size:</strong> around 200,000.
+				<br />
+			<strong>Behavior Traits:</strong> Pack wolf.
 			</p>
 	
 		</div>
@@ -34,7 +51,17 @@
 		<div class="TextAlign2">
 			<h1 class="textsze1">Northwestern Wolf</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> around 39 inches.
+				<br />
+			<strong>Avg Weight:</strong> 79-145 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 6-8 years.
+				<br />
+			<strong>Diet:</strong> moose, bison, elk, caribou, Dall sheep, Sitka Black-tailed deer, mountain goats, beaver, salmon, vole, lemmings, ground squirrels and snowshoe hare.
+				<br />
+			<strong>Population Size:</strong> Unknown.
+				<br />
+			<strong>Behavior Traits:</strong> Pack wolf.
 			</p>
 	
 		</div>
@@ -45,7 +72,17 @@
 		<div class="TextAlign1">
 			<h1 class="textsze1">Mexican Wolf</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 24-32 inches.
+				<br />
+			<strong>Avg Weight:</strong> 50-90 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 6-8 years.
+				<br />
+			<strong>Diet:</strong> elk, white-tailed deer, mule deer,  javelinas, rabbits, ground squirrels and mice.
+				<br />
+			<strong>Population Size:</strong> around 114.
+				<br />
+			<strong>Behavior Traits:</strong> Pack wolf.
 			</p>
 	
 		</div>
@@ -56,7 +93,17 @@
 		<div class="TextAlign2">
 			<h1 class="textsze1">Eurasian Wolf</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> Around 30 inches.
+				<br />
+			<strong>Avg Weight:</strong> 70-130 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 7-8 years.
+				<br />
+			<strong>Diet:</strong> moufflon, chamois, saiga, wild boar, red deer, roe deer and livestock.
+				<br />
+			<strong>Population Size:</strong> around 300-350.
+				<br />
+			<strong>Behavior Traits:</strong> Pack wolf.
 			</p>
 	
 		</div>
@@ -67,31 +114,31 @@
 		<div class="TextAlign1">
 			<h1 class="textsze1">Northern Rocky Mountain Wolf</h1>
 			<p class="textsize2">
-			Stuff About Dog
+			<strong>Avg Height:</strong> 26-32 inches.
+				<br />
+			<strong>Avg Weight:</strong> 70-150 pounds.
+				<br />
+			<strong>Avg Life-Span:</strong> 4 years.
+				<br />
+			<strong>Diet:</strong> bison, elk, the Rocky Mountain mule deer, and the beaver.
+				<br />
+			<strong>Population Size:</strong> around 1,704.
+				<br />
+			<strong>Behavior Traits:</strong> Pack wolf.
 			</p>
 	
 		</div>
 </div>
-	
-<div class="ReverseRows">
-	<img src="Dog Breed Pictures/Types of Wolves/Mongolian Wolf.jpg" class="picturestuff2" />
-		<div class="TextAlign2">
-			<h1 class="textsze1">Mongolian Wolf</h1>
-			<p class="textsize2">
-			Stuff About Dog
-			</p>
-	
-		</div>
-</div>
+
 	
 
 	
 		
 	<div class="footer">
   	 <h2>Credit</h2>
-	<P>
+	<p>
 		All images were taken off of google images labeled for reuse, American Kennel Club website, or taken by me.
-	</P>
+	</p>
 	</div>
 </body>
 </html>
